--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
 header {
   text-align: center;
+  background-color: #fff8f1;
 }
-
+body {
+  background-color: #fff8f1;
+}
 h1 {
   text-align: center;
 }
 
 .headshot {
-  max-width: 80%;
+  width: 480px;
+  height: 480px;
+  max-width: 100%;
   display: block;
   margin: 0 auto;
+}
+
+.blog-image {
+  display: block;
+  margin: 0 auto;
+  border-radius: 100%;
+  max-width: 400px;
+}
+
+.blog-title {
+  display: block;
+  text-align: center;
+  overflow-wrap: break-word;
+  font-size: 20px;
+  line-height: 28px;
+  cursor: pointer;
 }
