--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: space-around;
   text-align: center;
   background-color: #fff8f1;
+  font-family: "Roboto", serif;
+  max-width: 600px;
+  margin: 0 auto;
 }
 h1 {
   text-align: center;
@@ -21,12 +26,35 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 800px;
+  max-width: 600px;
   margin: 2rem auto;
   padding: 2rem;
-  background: white;
+
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.header-title {
+  padding: 10px 15px;
+  margin-top: 5px;
+}
+
+.header-portfolio {
+  border-right: 1px solid black;
+  padding: 10px 15px;
+}
+
+.header-services {
+  border-right: 1px solid black;
+  padding: 10px 15px;
+}
+
+.header-contact {
+  padding: 10px 15px;
+}
+
+.header-navigation {
+  margin-top: 15px;
 }
 .headshot {
   width: 400px;
@@ -42,16 +70,104 @@ button {
   gap: 0.5rem;
 }
 .name {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 5rem;
+  font-weight: 300;
+  font-family: "Roboto", serif;
+  line-height: 3rem;
 }
 .about-me {
   font-size: 1rem;
 }
 
-.buttons button {
-  padding: 0.5rem 1rem;
-  margin: 0 auto;
-  font: 1rem;
+/* Buttons */
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+
   cursor: pointer;
+}
+
+.portfolio-button {
+  background-color: #e0be9a;
+  color: white;
+  font-family: "Roboto", serif;
+  border: none;
+  font-weight: 500;
+  font-size: 1rem;
+  border-radius: 50%;
+  margin: 24px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.services-button {
+  background-color: #5b4d43;
+  color: white;
+  font-family: "Roboto", serif;
+  border: none;
+  font-weight: 500;
+  font-size: 1rem;
+  border-radius: 50%;
+  margin: 24px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-button {
+  background-color: #808080;
+  color: white;
+  font-family: "Roboto", serif;
+  border: none;
+  font-weight: 500;
+  font-size: 1rem;
+  border-radius: 50%;
+  margin: 24px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+/* Font Family */
+.roboto-thin {
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.roboto-light {
+  font-family: "Roboto", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.roboto-regular {
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-medium {
+  font-family: "Roboto", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.roboto-bold {
+  font-family: "Roboto", serif;
+  font-weight: 700;
+  font-style: normal;
 }
