--- a/style.css
+++ b/style.css
@@ -13,26 +13,20 @@ header {
 }
 h1 {
   text-align: center;
+  font-size: 64px;
 }
 
-button {
-  cursor: pointer;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-}
 .profile-container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  max-width: 600px;
+  max-width: 60%;
   margin: 2rem auto;
   padding: 2rem;
-
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  gap: 2rem;
 }
+
+/* Header */
 
 .header-title {
   padding: 10px 15px;
@@ -56,7 +50,12 @@ button {
 .header-navigation {
   margin-top: 15px;
 }
+
+/* Main */
+
 .headshot {
+  display: flex;
+  justify-content: flex-start;
   width: 400px;
   height: 400px;
   border-radius: 50%;
@@ -66,15 +65,10 @@ button {
 .profile-details {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+
   gap: 0.5rem;
 }
-.name {
-  font-size: 5rem;
-  font-weight: 300;
-  font-family: "Roboto", serif;
-  line-height: 3rem;
-}
+
 .about-me {
   font-size: 1rem;
 }
@@ -85,56 +79,56 @@ button {
   display: flex;
   justify-content: space-between;
   padding: 2rem;
-
-  cursor: pointer;
 }
 
-.portfolio-button {
-  background-color: #e0be9a;
-  color: white;
-  font-family: "Roboto", serif;
-  border: none;
-  font-weight: 500;
-  font-size: 1rem;
+button {
+  margin: 15px 10px;
   border-radius: 50%;
-  margin: 24px;
-  width: 100px;
-  height: 100px;
+  height: 150px;
+  width: 150px;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  font-family: "Roboto", serif;
+  font-weight: 500;
+  color: white;
+  font-size: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.2);
+  transition: all 150ms ease-in-out;
+}
+.portfolio-button {
+  background-color: #e0be9a;
+}
+
+.portfolio-button:hover {
+  background-color: #b1967a;
+}
+.portfolio-button-text {
+  color: white;
 }
 
 .services-button {
   background-color: #5b4d43;
+}
+.services-button:hover {
+  background-color: #4b3f37;
+}
+.services-button-text {
   color: white;
-  font-family: "Roboto", serif;
-  border: none;
-  font-weight: 500;
-  font-size: 1rem;
-  border-radius: 50%;
-  margin: 24px;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .contact-button {
   background-color: #808080;
+}
+.contact-button-text {
   color: white;
-  font-family: "Roboto", serif;
-  border: none;
-  font-weight: 500;
-  font-size: 1rem;
-  border-radius: 50%;
-  margin: 24px;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.contact-button:hover {
+  background-color: #535353;
 }
 
 a {
