--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ h1 {
 }
 
 h2 {
-  font-size: 36px;
-  padding-bottom: 30px;
+  font-size: 64px;
+  padding: 30px 30px;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 36px;
   opacity: 0.7;
 }
 
@@ -36,10 +36,10 @@ p {
 }
 
 .headshot {
-  display: block;
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
   padding: 15px 20px;
-  max-width: 75%;
+  max-width: 100%;
   filter: grayscale();
   border-radius: 50%;
 }
@@ -60,8 +60,10 @@ p {
   text-decoration: none;
   text-transform: capitalize;
   background: var(--primary-color);
+  border: 1px solid var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+  font-size: 24px;
 }
 
 .secondary-link {
@@ -72,15 +74,23 @@ p {
   color: var(--secondary-color);
   border: 1px solid var(--secondary-color);
   box-shadow: var(--box-shadow);
+  font-size: 24px;
 }
 .tertiary-link {
   border-radius: 4px;
-  padding: 20px 15px;
+  padding: 20px 20px;
   text-decoration: none;
   text-transform: capitalize;
   background: var(--secondary-color);
+  border: 1px solid var(--tertiary-color);
   box-shadow: var(--box-shadow);
   color: white;
+  font-size: 24px;
+}
+
+.hero {
+  padding: 10%;
+  background-color: rgb(234, 219, 204);
 }
 
 p {
@@ -88,39 +98,28 @@ p {
   padding: 10px;
 }
 
-.email-link {
-  display: flex;
-  justify-content: center;
-  color: var(--primary-color);
-  font-size: 28px;
-  text-decoration: none;
-}
-
-.email-link:hover {
-  text-decoration: underline;
-}
-
 .blog-links {
   display: flex;
   justify-content: space-evenly;
 }
 
-@media (max-width: 579px) {
+@media (max-width: 576px) {
   h1 {
     font-size: 48px;
   }
   h2 {
     font-size: 24px;
   }
+  h3 {
+    font-size: 20px;
+  }
   p {
     font-size: 16px;
   }
-  .headshot {
-    padding: 20px;
-  }
 
+  .tertiary-link,
+  .secondary-link,
   .primary-link {
-    display: flex; /* Use flex layout for inline links */
-    justify-content: center;
+    font-size: 16px;
   }
 }
