--- a/style.css
+++ b/style.css
@@ -87,23 +87,23 @@ p {
   font-size: 24px;
 }
 
-/* About Page */
+/* About & Portfolio Pages header*/
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section-content {
+.content {
   margin: 30px;
 }
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
 }
 
-.about-section h2 {
+.content-container h2 {
   font-size: 24px;
 }
 
-.about-section p {
+.content-container p {
   font-size: 18px;
 }
 
@@ -140,9 +140,8 @@ p {
   .hero h2 {
     font-size: 36px;
   }
-  .about-section {
-    padding: 0px;
-    margin: 0px;
+  .content-container {
+    padding: 80px 20px;
   }
 
   .tertiary-link,
