--- a/style.css
+++ b/style.css
@@ -17,15 +17,13 @@ h3 {
   text-align: center;
   font-family: var(--font-family);
 }
-
-h3 {
-  font-size: 36px;
-  opacity: 0.7;
+.project-img {
+  border-radius: 10px;
+  transition: all 150ms ease-in-out;
 }
-
-p {
-  font-size: 24px;
-  line-height: 1.5;
+.project-img:hover {
+  filter: contrast(80%);
+  transform: scale(1.1);
 }
 
 /* Hero */
@@ -95,16 +93,22 @@ p {
 .content {
   margin: 30px;
 }
-.content-container h1 {
+.content h1 {
   font-size: 64px;
 }
 
-.content-container h2 {
+.content h2 {
   font-size: 24px;
 }
 
-.content-container p {
-  font-size: 18px;
+.content h3 {
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.content p {
+  font-size: 16px;
+  opacity: 0.7;
 }
 
 .poppins-regular {
@@ -116,17 +120,17 @@ p {
 /* Media queries */
 
 @media (max-width: 800px) {
-  h1 {
+  .content h1 {
     font-size: 48px;
   }
-  h2 {
+  .content h2 {
     font-size: 24px;
   }
-  h3 {
-    font-size: 20px;
+  .content h3 {
+    font-size: 18px;
   }
-  p {
-    font-size: 16px;
+  .content p {
+    font-size: 14px;
   }
 
   .hero {
