--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   --primary-color: #e0be9a;
   --secondary-color: #5b4d43;
+  --tertiary-color: #fff8f1;
+
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   --font-family: "Poppins", sans-serif;
 }
@@ -17,6 +19,28 @@ h3 {
   text-align: center;
   font-family: var(--font-family);
 }
+
+footer .email-link {
+  text-decoration: none;
+  padding: 50px;
+  color: var(--secondary-color);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+footer .email-link:hover {
+  color: var(--secondary-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+
 .project-img {
   border-radius: 10px;
   transition: all 150ms ease-in-out;
